fix: отдебажен запуск